@@ -15,14 +15,15 @@
 
 				  N E W S
 
-Sat Jul 19 02:48:26 BST 2008  - surfraw 2.2.3
+Sat Jul 19 05:46:03 BST 2008  - surfraw 2.2.3
 
   * Search for default browsers during build.
     This can be overridden by passing --with-text-browser=BROWSER
     and --with-graphical-browser=BROWSER to ./configure.
   * Detect which awk to use.
   * Fixed slinuxdoc.
-  * Fixed bashisms.
+  * Removed bashisms.
+  * Fixed uninstall.
 
 Thu Jul  3 08:47:14 BST 2008  - surfraw 2.2.2
 
