@@ -7,6 +7,8 @@
 	* slinuxdoc: switch to test on main page, google thinks
 	  search on search page is spyware shenanigans.
 	* openbsd: fix test.
+	* add uninstall-local targets to remove elvidir and symlinks
+	  on uninstall.
 
 2008-07-08  Ian Beckwith  <ianb@erislabs.net>
 
